--- a/src/app/main/components/event/event.component.scss
+++ b/src/app/main/components/event/event.component.scss
@@ -1,163 +1,372 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+// $grey: #788CA0;
+// $light: #EEF5F8;
+// $blue: #007EA7;
+// $dark: #121218;
+// $lightdark: #1C1C24;
+// .container {
+//     max-width: 860px;
+//     border: 1px solid $grey;
+//     border-radius: 5px;
+//     margin: 100px auto 0 auto;
+//     background: $lightdark;
+// }
+// .title {
+//     font-size: 25px;
+//     padding: 20px 0 0 20px;
+//     color: $light;
+//     margin-left: 8px;
+//     user-select: none;
+// }
+// .box {
+//     display: flex;
+//     flex-wrap: wrap;
+//     padding: 0 5px;
+// }
+// .box__data {
+//     padding: 20px;
+// }
+// .flex {
+//     display: flex;
+//     justify-content: space-between;
+// }
+// .text__title {
+//     width: 150px;
+//     font-size: 16px;
+//     color: $grey;
+//     padding: 5px 5px 5px 0;
+//     user-select: none;
+// }
+// .text__data {
+//     width: 250px;
+//     margin-left: 10px;
+//     font-size: 16px;
+//     color: $light;
+//     padding: 5px 0;
+//     font-weight: 500;
+//     user-select: none;
+//     text-align: end;
+// }
+// .dangerous {
+//     color: $grey;
+//     user-select: none;
+//     margin-bottom: 10px;
+// }
+// .box__btns {
+//     margin: 20px 0 10px 0;
+// }
+// .btn {
+//     width: 212px;
+// }
+// .box__tabs {
+//     display: flex;
+//     justify-content: space-between;
+//     margin-bottom: 10px;
+// }
+// .tab {
+//     margin-right: 5px;
+//     color: $light;
+//     padding: 5px 0;
+//     cursor: pointer;
+// }
+// .active {
+//     border-bottom: 2px solid $blue;
+// }
+// .surveys__title {
+//     color: $light;
+//     display: flex;
+//     align-items: center;
+//     user-select: none;
+// }
+// .subtitle {
+//     color: $light;
+//     font-size: 20px;
+//     margin: 0 0 10px 0;
+//     user-select: none;
+// }
+// .textarea {
+//     width: 290px;
+//     color: $light;
+// }
+// .icon__send {
+//     display: inline-block;
+//     background-color: $lightdark;
+//     border: none;
+//     cursor: pointer;
+// }
+// .btn__send {
+//     display: none;
+//     width: 290px;
+//     margin: 0 0 10px 0;
+//     background-color: $blue;
+// }
+// .title__comment {
+//     color: $light;
+//     display: flex;
+//     align-items: center;
+//     cursor: pointer;
+//     justify-content: center;
+//     margin-bottom: 10px;
+// }
+// .container__comment {
+//     max-height: 300px;
+//     overflow: auto;
+//     border-radius: 5px;
+// }
+// .box__comment {
+//     background-color: $grey;
+//     margin: 5px 0;
+//     border-radius: 5px 5px 5px 0px;
+//     display: inline-block;
+//     padding: 5px 10px;
+//     cursor: pointer;
+//     max-width: 300px;
+// }
+// .user__comment {
+//     font-size: 12px;
+//     color: $dark;
+// }
+// .text__comment {
+//     padding: 5px 0px;
+//     color: $light;
+// }
+// .time__comment {
+//     text-align: end;
+//     font-size: 12px;
+//     color: $dark;
+// }
+// @media(max-width: 510px) {
+//     .container {
+//         width: 300px;
+//         padding: 20px 0;
+//     }
+//     .box__data {
+//         padding: 0;
+//     }
+//     .text__title {
+//         width: auto;
+//     }
+//     .text__data {
+//         width: auto;
+//     }
+//     .btn {
+//         width: 140px;
+//     }
+//     .subtitle {
+//         margin: 20px 0 10px 0;
+//     }
+//     .icon__send {
+//         display: none;
+//     }
+//     .btn__send {
+//         display: block;
+//     }
+// }
+
+
+
 .container {
-    max-width: 860px;
-    border: 1px solid $grey;
-    border-radius: 5px;
-    margin: 100px auto 0 auto;
-    background: $lightdark;
-}
-.title {
-    font-size: 25px;
-    padding: 20px 0 0 20px;
-    color: $light;
-    margin-left: 8px;
-    user-select: none;
-}
-.box {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 5px;
-}
-.box__data {
-    padding: 20px;
+    max-width: 1140px;
+    margin: 120px auto 0 auto;
 }
 .flex {
     display: flex;
     justify-content: space-between;
 }
-.text__title {
-    width: 150px;
-    font-size: 16px;
-    color: $grey;
-    padding: 5px 5px 5px 0;
-    user-select: none;
+.data {
+    width: 740px;
+    background-color: #00000050;
 }
-.text__data {
-    width: 250px;
-    margin-left: 10px;
-    font-size: 16px;
-    color: $light;
-    padding: 5px 0;
-    font-weight: 500;
-    user-select: none;
-    text-align: end;
+.data__flex_id {
+    display: flex;
+    justify-content: flex-end;
 }
-.dangerous {
-    color: $grey;
-    user-select: none;
-    margin-bottom: 10px;
+.data__box_id {
+    position: relative;
+    width: 120px;
+    height: 0;
+	border-top: 40px solid #FFFF00; 
+	border-left: 30px solid transparent;
 }
-.box__btns {
-    margin: 20px 0 10px 0;
+.data__id {
+    position: absolute;
+    top: -42px;
+    left: 10px;
+    font-family: 'DinProItalic';
+    font-size: 36px;
+    color: #000000;
+    z-index: 100;
 }
-.btn {
-    width: 212px;
-}
-.box__tabs {
+.data__flex {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
-.tab {
-    margin-right: 5px;
-    color: $light;
-    padding: 5px 0;
-    cursor: pointer;
+.data__box_text {
 }
-.active {
-    border-bottom: 2px solid $blue;
+.data__title {
+    font-family: DinProItalic;
+    font-size: 64px;
+    color: #FFFFFF;
+    span {
+        font-family: DinProItalic;
+        font-size: 64px;
+        color: #00FFFF;
+    }
 }
-.surveys__title {
-    color: $light;
+.data__subtitle {
+    font-family: DinProMedium;
+    font-size: 24px;
+    color: #959595;
+}
+.data__flex_status {
     display: flex;
-    align-items: center;
-    user-select: none;
-}
-.subtitle {
-    color: $light;
-    font-size: 20px;
-    margin: 0 0 10px 0;
-    user-select: none;
-}
-.textarea {
-    width: 290px;
-    color: $light;
-}
-.icon__send {
-    display: inline-block;
-    background-color: $lightdark;
-    border: none;
-    cursor: pointer;
-}
-.btn__send {
-    display: none;
-    width: 290px;
-    margin: 0 0 10px 0;
-    background-color: $blue;
-}
-.title__comment {
-    color: $light;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
     justify-content: center;
-    margin-bottom: 10px;
 }
-.container__comment {
-    max-height: 300px;
-    overflow: auto;
-    border-radius: 5px;
+.data__title_status {
+    font-family: DinProMedium;
+    font-size: 36px;
+    color: #FFFF00;
 }
-.box__comment {
-    background-color: $grey;
-    margin: 5px 0;
-    border-radius: 5px 5px 5px 0px;
-    display: inline-block;
-    padding: 5px 10px;
-    cursor: pointer;
-    max-width: 300px;
-}
-.user__comment {
-    font-size: 12px;
-    color: $dark;
-}
-.text__comment {
-    padding: 5px 0px;
-    color: $light;
-}
-.time__comment {
+.data__description {
+    font-family: DinProMedium;
+    font-size: 24px;
+    color: #959595;
     text-align: end;
-    font-size: 12px;
-    color: $dark;
+    width: 400px;
 }
-@media(max-width: 510px) {
-    .container {
-        width: 300px;
-        padding: 20px 0;
+.vote {
+    width: 377px;
+}
+.vote__box {
+    height: 359px;
+    border: 1px solid #FFFF00;
+}
+.vote__head {
+    background: #FFFF00;
+}
+.vote__head_title {
+    font-family: DinProItalic;
+    font-size: 36px;
+    color: #191919;
+    padding: 10px;
+    text-align: center;
+}
+.vote__box_text {
+    margin: 0 5px;
+}
+.vote__title {
+    margin-top: 10px;
+    font-size: 18px;
+    color: #FFFFFF;
+}
+.vote__subtitle {
+    font-size: 18px;
+    color: #959595;
+}
+.vote__box_btns {
+    display: flex;
+    justify-content: space-between;
+}
+.vote__btn {
+    height: 50px;
+    width: 185px;
+    margin: 2px;
+    font-family: DinProItalic;
+    color: #191919;
+    font-size: 36px;
+    border: none;
+}
+.participants {
+}
+.participants__box_btns {
+    display: flex;
+    margin-bottom: 17px;
+}
+.participants__btn {
+    width: 186px;
+    height: 47px;
+    font-family: DinProItalic;
+    font-size: 36px;
+    border: none;
+}
+.participants__data {
+    display: flex;
+}
+.participants__filters {
+    display: flex;
+    flex-direction: column;
+}
+.participants__btn_filter {
+    display: flex;
+    align-items: center;
+    width: 281px;
+    background: none;
+    font-size: 36px;
+    color: #FFFFFF;
+    border: none;
+    span {
+        color: #959595;
     }
-    .box__data {
-        padding: 0;
-    }
-    .text__title {
-        width: auto;
-    }
-    .text__data {
-        width: auto;
-    }
-    .btn {
-        width: 140px;
-    }
-    .subtitle {
-        margin: 20px 0 10px 0;
-    }
-    .icon__send {
-        display: none;
-    }
-    .btn__send {
-        display: block;
-    }
+}
+.participants__list {
+}
+.participants__cell {
+    display: flex;
+    align-items: center;
+    width: 462px;
+    height: 68px;
+    background: linear-gradient(to right, #FF0080 15%, #FFFFFF 15% 98%, #FF0080 98%);
+    margin-bottom: 5px;
+}
+.participants__avatar {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #191919;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+    margin: 0 5px 0 43px;
+}
+.participants__cell_text {
+}
+.participants__status {
+    font-size: 24px;
+    color: #191919;
+}
+.participants__name {
+    font-size: 24px;
+    color: #191919;
+}
+.user {
+    margin-left: 20px;
+    width: 377px;
+}
+.user__flex {
+    display: flex;
+}
+.user__text {
+}
+.user__status {
+    color: #959595;
+    font-size: 36px;
+}
+.user__number {
+    color: #FFFFFF;
+    font-family: DinProItalic;
+    font-size: 18px;
+}
+.user__email {
+    color: #959595;
+    font-size: 18px;
+}
+.user__avatar {
+    width: 146px;
+    height: 146px;
+    background-color: #FFFFFF;
+    margin-right: 6px;
+}
+.user__title {
+    font-family: DinProItalic;
+    color: #FFFFFF;
+    font-size: 36px;
+    letter-spacing: 0;
 }
