--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,26 @@
 @import "../node_modules/@angular/material/prebuilt-themes/purple-green.css";
 @import '~ngx-toastr/toastr';
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+@font-face {
+    font-family: DinProMedium;
+    src: url("./assets/fonts/637-font.otf") format("opentype");
+}
+@font-face {
+    font-family: DinProBold;
+    src: url("./assets/fonts/645-font.otf") format("opentype");
+}
+@font-face {
+    font-family: DinProItalic;
+    src: url("./assets/fonts/644-font.otf") format("opentype");
+}
 $grey: #788CA0;
 $light: #EEF5F8;
 $blue: #007EA7;
 $dark: #121218;
 $lightdark: #1C1C24;
 * {
-    font-family: 'Ubuntu', sans-serif;
+    // font-family: 'Ubuntu', sans-serif;
+    font-family: DinProMedium;
     margin: 0;
     padding: 0;
 }
@@ -33,5 +46,6 @@ html, body {
     }
 }
 body {
-    background-color: $dark;
+    // background-color: $dark;
+    background-image: url(./assets/img/background-image.jpg);
 }
