--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -142,35 +142,35 @@
         <div class="data">
             <div class="data__flex_id">
                 <div class="data__box_id">
-                    <p class="data__id">№ 2453</p>
+                    <p class="data__id">№ {{event?.id}}</p>
                 </div>
             </div>
             <div class="data__flex">
                 <div class="data__box_text">
-                    <p class="data__title">ВОЛЛЕЙБОЛ</p>
-                    <p class="data__subtitle">СКФУ, ул. Кулакова, д.2</p>
+                    <p class="data__title">{{event?.sport.name}}</p>
+                    <p class="data__subtitle">{{event?.location.name_address_short}}</p>
                 </div>
                 <div class="data__box_text">
-                    <p class="data__title_status">ожидается начало</p>
-                    <p class="data__subtitle" style="text-align: end;">до старта 1 д. 22 ч. 35 м.</p>
-                </div>
-            </div>
-            <div class="data__flex">
-                <div class="data__box_text">
-                    <p class="data__title">19:00-22:00</p>
-                    <p class="data__subtitle">21 марта 2022, Воскресенье</p>
-                </div>
-                <div class="data__box_text">
-                    <p class="data__title">ОТКРЫТАЯ ИГРА</p>
-                    <p class="data__subtitle" style="text-align: end;">создатель события <span style="color: #00FFFF;">Петя Петров</span></p>
+                    <p class="data__title_status">{{event?.status.name}}</p>
+                    <p class="data__subtitle" style="text-align: end;">до старта {{result | date: 'ddд. HHч. mmм. ssс.'}}</p>
                 </div>
             </div>
             <div class="data__flex">
                 <div class="data__box_text">
-                    <p class="data__title"><span>175</span>/2200 ₽</p>
+                    <p class="data__title">{{event?.short_time}}</p>
+                    <p class="data__subtitle">{{event?.full_date}}</p>
+                </div>
+                <div class="data__box_text">
+                    <p class="data__title">{{event?.type.name}}</p>
+                    <p class="data__subtitle" style="text-align: end;">создатель события <span style="color: #00FFFF;">{{event?.created_by}}</span></p>
+                </div>
+            </div>
+            <div class="data__flex">
+                <div class="data__box_text">
+                    <p class="data__title"><span>{{statistics?.event_stats.price_per_player}}</span>/{{event?.price}}&#8381;</p>
                     <p class="data__subtitle">[с человека / общая]</p>
                 </div>
-                <p class="data__description">Это комментарий к событию. Тут информация о том, что за мероприятие, зачем оно, да и вообще о чем оно. Ну, и в целом, что вообще тут происходит.</p>
+                <p class="data__description">{{event?.comment}}</p>
             </div>
         </div>
         <div class="vote">
@@ -179,7 +179,7 @@
                     <p class="vote__head_title">ВЫ ПРИГЛАШЕНЫ!</p>
                 </div>
                 <div class="vote__box_text">
-                    <p class="vote__title">Вас пригласил <span style="color: #00FFFF;">Петя Петров</span>.</p>
+                    <p class="vote__title">Вас пригласил <span style="color: #00FFFF;">{{event?.created_by}}</span>.</p>
                     <span class="vote__subtitle">Йоу, приходи, не пожалеешь. Точно тебе говорю, будет круто!</span>
 
                     <p class="vote__title">Участие в закрытом событии.</p>
@@ -190,8 +190,8 @@
                 </div>
             </div>
             <div class="vote__box_btns">
-                <button class="vote__btn" style="background-color: #00FFFF;">Приду</button>
-                <button class="vote__btn" style="background-color: #FF0080;">Не приду</button>
+                <button class="vote__btn" style="background-color: #00FFFF;" (click)="sendAccept()">Приду</button>
+                <button class="vote__btn" style="background-color: #FF0080;" (click)="sendReject()">Не приду</button>
             </div>
         </div>
     </div>
@@ -204,49 +204,70 @@
         <div class="participants">
             <div class="participants__data">
                 <div class="participants__filters">
-                    <button class="participants__btn_filter">
-                        <mat-icon style="color: #FFFFFF; font-size: 36px; margin: 0 20px 15px 0;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
-                        УЧАСТНИКИ <span>(15)</span>
+                    <button [ngClass]="{active_filter: view.accepted}" class="participants__btn_filter" (click)="viewAccepted()">
+                        <mat-icon style="color: #363636; font-size: 36px; margin: 0 20px 15px 0;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
+                        УЧАСТНИКИ <span>({{statistics?.applications.accepted}})</span>
                     </button>
-                    <button class="participants__btn_filter">
-                        <mat-icon style="color: #FFFFFF; font-size: 36px; margin: 0 20px 15px 0;" aria-hidden="false" aria-label="Example logout icon">groups</mat-icon>
-                        ГОСТИ <span>(5)</span>
+                    <button [ngClass]="{active_filter: view.guests}" class="participants__btn_filter" (click)="viewGuests()">
+                        <mat-icon style="color: #363636; font-size: 36px; margin: 0 20px 15px 0;" aria-hidden="false" aria-label="Example logout icon">groups</mat-icon>
+                        ГОСТИ <span>({{statistics?.guests_stats.all}})</span>
                     </button>
-                    <button class="participants__btn_filter">
-                        <mat-icon style="color: #FFFFFF; font-size: 36px; margin: 0 20px 15px 0;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
-                        НЕ ПРИДУТ <span>(2)</span>
+                    <button [ngClass]="{active_filter: view.refused}" class="participants__btn_filter" (click)="viewRefused()">
+                        <mat-icon style="color: #363636; font-size: 36px; margin: 0 20px 15px 0;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
+                        НЕ ПРИДУТ <span>({{statistics?.applications.refused}})</span>
                     </button>
-                    <button class="participants__btn_filter">
-                        <mat-icon style="color: #FFFFFF; font-size: 32px; margin: 0 20px 10px 0;" aria-hidden="false" aria-label="Example logout icon">mark_email_unread</mat-icon>
-                        ПРИГЛАШЕНЫ <span>(15)</span>
+                    <button [ngClass]="{active_filter: view.invited}" class="participants__btn_filter" (click)="viewInvited()">
+                        <mat-icon style="color: #363636; font-size: 32px; margin: 0 20px 10px 0;" aria-hidden="false" aria-label="Example logout icon">mark_email_unread</mat-icon>
+                        ПРИГЛАШЕНЫ <span>({{statistics?.applications.invited}})</span>
                     </button>
-                    <button class="participants__btn_filter">
-                        <mat-icon style="color: #FFFFFF; font-size: 28px; margin: 0 20px 10px 0;" aria-hidden="false" aria-label="Example logout icon">pan_tool</mat-icon>
-                        ОТКЛОНЕНЫ <span>(2)</span>
+                    <button [ngClass]="{active_filter: view.rejected}" class="participants__btn_filter" (click)="viewRejected()">
+                        <mat-icon style="color: #363636; font-size: 28px; margin: 0 20px 10px 0;" aria-hidden="false" aria-label="Example logout icon">pan_tool</mat-icon>
+                        ОТКЛОНЕНЫ <span>({{statistics?.applications.rejected}})</span>
                     </button>
                 </div>
-                <div class="participants__list">
-                    <div class="participants__cell">
+
+                <div class="participants__list" *ngIf="view.accepted">
+                    <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application.user.id)">
                         <div class="participants__avatar"></div>
                         <div class="participants__cell_text">
                             <p class="participants__status">[игрок]</p>
-                            <p class="participants__name">Петя Петров</p>
+                            <p class="participants__name">{{application.user.full_name}}</p>
                         </div>
                     </div>
-
-                    <div class="participants__cell">
+                </div>
+                <div class="participants__list" *ngIf="view.guests">
+                    <div class="participants__cell" *ngFor="let guest of event.guests">
                         <div class="participants__avatar"></div>
                         <div class="participants__cell_text">
                             <p class="participants__status">[игрок]</p>
-                            <p class="participants__name">Петя Петров</p>
+                            <p class="participants__name">{{guest.name}}</p>
                         </div>
                     </div>
-
-                    <div class="participants__cell">
+                </div>
+                <div class="participants__list" *ngIf="view.refused">
+                    <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application.user.id)">
                         <div class="participants__avatar"></div>
                         <div class="participants__cell_text">
                             <p class="participants__status">[игрок]</p>
-                            <p class="participants__name">Петя Петров</p>
+                            <p class="participants__name">{{application.user.full_name}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="participants__list" *ngIf="view.invited">
+                    <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application.user.id)">
+                        <div class="participants__avatar"></div>
+                        <div class="participants__cell_text">
+                            <p class="participants__status">[игрок]</p>
+                            <p class="participants__name">{{application.user.full_name}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="participants__list" *ngIf="view.rejected">
+                    <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application.user.id)">
+                        <div class="participants__avatar"></div>
+                        <div class="participants__cell_text">
+                            <p class="participants__status">[игрок]</p>
+                            <p class="participants__name">{{application.user.full_name}}</p>
                         </div>
                     </div>
                 </div>
@@ -257,11 +278,11 @@
                 <div class="user__avatar"></div>
                 <div class="user__text">
                     <p class="user__status">[игрок]</p>
-                    <p class="user__number">+7(988)888-88-88</p>
-                    <p class="user__email">main-main@mail.ru</p>
+                    <p class="user__number">{{user?.phone_number}}</p>
+                    <p class="user__email">{{user?.email}}</p>
                 </div>
             </div>
-            <p class="user__title">Петя <br> Петрророров</p>
+            <p class="user__title">{{user?.first_name}} <br> {{user?.last_name}}</p>
         </div>
     </div>
 </div>
