--- a/src/app/main/components/event/event.component.scss
+++ b/src/app/main/components/event/event.component.scss
@@ -270,7 +270,7 @@ p, span {
     display: flex;
     justify-content: space-between;
 }
-.vote__btn {
+.vote__btn_accept {
     height: 50px;
     width: 185px;
     margin: 2px;
@@ -279,6 +279,22 @@ p, span {
     font-size: 36px;
     border: none;
     cursor: pointer;
+    background-color: #00FFFF;
+}
+.vote__btn_refuse {
+    height: 50px;
+    width: 185px;
+    margin: 2px;
+    font-family: DinProItalic;
+    color: #191919;
+    font-size: 36px;
+    border: none;
+    cursor: pointer;
+    background-color: #FF0080;
+}
+.vote__btn_mute {
+    background-color: #959595;
+    cursor: default;
 }
 .participants {
 }
